creacion de metodo Strategy para los filtros, creacion de boton cambiar imagen usuario